; ModuleID = '/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btqcomsmd.c_btqcomsmd_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btqcomsmd.c_btqcomsmd_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.btqcomsmd = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @btqcomsmd_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btqcomsmd_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.btqcomsmd*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.btqcomsmd* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.btqcomsmd* %5, %struct.btqcomsmd** %3, align 8
  %6 = load %struct.btqcomsmd*, %struct.btqcomsmd** %3, align 8
  %7 = getelementptr inbounds %struct.btqcomsmd, %struct.btqcomsmd* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @hci_unregister_dev(i32 %8)
  %10 = load %struct.btqcomsmd*, %struct.btqcomsmd** %3, align 8
  %11 = getelementptr inbounds %struct.btqcomsmd, %struct.btqcomsmd* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @hci_free_dev(i32 %12)
  %14 = load %struct.btqcomsmd*, %struct.btqcomsmd** %3, align 8
  %15 = getelementptr inbounds %struct.btqcomsmd, %struct.btqcomsmd* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @rpmsg_destroy_ept(i32 %16)
  %18 = load %struct.btqcomsmd*, %struct.btqcomsmd** %3, align 8
  %19 = getelementptr inbounds %struct.btqcomsmd, %struct.btqcomsmd* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @rpmsg_destroy_ept(i32 %20)
  ret i32 0
}

declare dso_local %struct.btqcomsmd* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @hci_unregister_dev(i32) #1

declare dso_local i32 @hci_free_dev(i32) #1

declare dso_local i32 @rpmsg_destroy_ept(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
